# vriddhi-core

./: .gitignore  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  LICENSE  README.md  README_STREAMLIT.md  SECURITY.md  Vriddhi-before-and-after-cursor.md  Vriddhi-the-game-changer.md  about_vriddhi.md  build_grand_table.py  build_research_db.py  grand_table.csv  grand_table_expanded.csv  monthly-refresh-method.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py  ticker_aliases.json  ticker_resolver.py  vriddhi_core.py  vriddhi_ledger.py  vriddhi_monthly_refresh.py  vriddhi_validation.py
.github/workflows/: ci.yml  monthly-refresh.yml
.streamlit/: config.toml
docs/: 2026-07-22-feature-build-reference.md  architecture.md  backend-reengineering-reference.md  competitor-analysis-2026-07-22.md  methodology.md  monthly-refresh-runbook.md  recommendation-ledger.md
research/: benchmark.csv  manifest.json  portfolio_1y.json  portfolio_1y_prev.json  portfolio_2y.json  portfolio_2y_prev.json  portfolio_3y.json  portfolio_3y_prev.json  portfolio_4y.json  portfolio_4y_prev.json  portfolio_5y.json  portfolio_5y_prev.json  recommendation_ledger.json  refresh_summary.md  universe_health.json  validation_report.json
tests/: test_core_loaders.py  test_published_artifacts.py  test_streamlit_app.py  test_validation.py
